--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     </div>
                     <div class="team-4">
                         <!-- 这是头像图片 -->
-                        <a href="http://www.github.com/" target="_blank"><img src="Img/3.png">雨后初荷</a>
+                        <a href="http://www.github.com/" target="_blank"><img src="Img/yuhouchuhe1.png"></a>
                     </div>
                 </div>
                 <div class="team-Right">
